<resources>
    <string name="INFO">INFO</string>
    <string name="zero">0.00</string>
    <string name="limpar_text">Limpar</string>
    <string name="erro_text">ERRO</string>
    <string name="confirmar">Confirmar</string>
    <string name="confirmar_text">CONFIRMAÇÃO</string>
    <string name="informar_text">INFORMAÇÃO</string>
    <string name="fechar_text">FECHAR</string>
    <string name="attention">ATENÇÃO</string>
    <string name="granted_perms">Permissões concedidas.</string>
    <string name="internet_conn_error">Favor verificar a conexão com a internet.</string>
    <string name="travel_icorrect">Número da viagem incorreto.</string>
    <string name="incluir_item_pedido">Confirmar a inclusão do item %s ao pedido?</string>
    <string name="cliente_invalido_operacao">Cliente inválido ou inexistente na viagem.</string>
    <string name="excluir_item_pedido">Deseja excluir o item %s do pedido?</string>
    <string name="exit_confirm_travel_msg">Os dados da viagem serão perdidos! Confirma?</string>
    <string name="exit_confirm_clean_table_data">APAGANDO DADOS DAS TABELAS</string>
    <string name="printer_title">Imprimindo…</string>
    <string name="send_data_printer">Aguarde o término da impressão…</string>
    <string name="send_data_printer_ok">DADOS ENVIADOS</string>
    <string name="send_data_printer_fail">Houve falha na impressão! O %s não será impresso.
        \nDeseja realizar nova tentativa?</string>
    <string name="bar_code_msg">CODIDO VERIFICADO COM SUCESSO</string>
    <string name="empty_data">Preencha os dados para inclusão do item.</string>
    <string name="invalid_quantity">Quantidade informada superior ao saldo do item.</string>
    <string name="empty_product_code_msg">Preencha ou selecione um código de produto.</string>
    <string name="invalid_product_code_msg">Item inexistente</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="end_success">Finalizado com sucesso.</string>
    <string name="end_error">Finalizado com erro.</string>
    <string name="charge_file_error">Erro ao ler arquivo %s. Linha %d.</string>
    <string name="prog_message">Aguarde o fim do processamento.</string>
    <string name="num_viagem_manifesto">Informe a viagem impressa no manifesto:</string>
    <string name="check_carga_error">Existem patrimônios que não foram informados. Favor verificar!</string>
    <string name="fim_check_carga">Deseja finalizar o check de carga?</string>
    <string name="dois_pontos">:</string>
    <string name="patrimonio">Patrimônio:</string>
    <string name="serie_patrimonio">Série:</string>
    <string name="patrimonios">Patrimônios</string>
    <string name="patrimonio_ja_informado">Patrimônio %s já informado</string>
    <string name="patrimonio_invalido_item">Patrimônio não pertence ao item!</string>
    <string name="arquivo_finalizado_sucesso">Arquivo %s finalizado com sucesso!</string>
    <string name="arquivo_finalizado_erro">Arquivo %s finalizado com erro: %s!</string>
    <string name="arquivo_nao_encontrado">Arquivo %s não encontrado!</string>
    <string name="tabela_finalizado_sucesso">Arquivo %s finalizado com sucesso!</string>
    <string name="tabela_finalizado_erro">Arquivo %s finalizado com erro: %s!</string>
    <string name="ler_arquivo_carga">Lendo arquivo %s %d de %d.</string>
    <string name="pedido_sem_item">Pedido não contém nenhum item.</string>
    <string name="update_titulo">Atualizando versão</string>
    <string name="current_file">Baixando arquivo %s</string>
    <string name="update_message">Existe uma nova versão disponível para atualização. \nO processo de atualização será iniciado…</string>
    <string name="update_error_message">"Ocorreu um erro durante a atualização de versão. \nFavor realizar nova tentativa."</string>
    <string name="apagando_tabela">Apagando tabela %s</string>
    <string name="informar_horometro">Favor informar o hodômetro</string>
    <string name="invoice_exists">Existem Notas Fiscais emitidas na viagem! \nTodos os dados serão perdidos!</string>
    <string name="cancel_travel">Ao prosseguir com esta operação, todos os dados da viagem serão perdidos!</string>
    <string name="viagem_interrompida">Interrupção de viagem carregada.</string>
    <string name="pergunta_operadora">A operação Remessa Faturamento HC está disponível para o cliente! Deseja continuar na operação de Venda?</string>
    <string name="venda_invalida_paciente">Operação Inválida! \nUtilizar opção Remessa Faturamento HC!</string>
    <string name="update_price_password">Digite senha para alteração de preços!</string>
    <string name="pergunta_msg_adiconal">Deseja informar dados adicionais à Nota Fiscal do cliente?</string>
    <string name="status">Status: %s</string>
    <string name="create_invoice">Criando Nota Fiscal!</string>
    <string name="send_invoice">Enviando Nota Fiscal!</string>
    <string name="cancel_invoice">Enviando Cancelamento da Nota Fiscal!</string>
    <string name="find_invoice">Consultando Nota Fiscal!</string>
    <string name="get_invoice">Buscando notas fiscais</string>
    <string name="nota">Nota</string>
    <string name="operacao">Operação</string>
    <string name="serie">Série</string>
    <string name="evento">Evento</string>
    <string name="status_nfe">Status NFe</string>
    <string name="status_">Status</string>
    <string name="msg_nova_tentativa_invoice">%s será impresso Off Line! Deseja realizar nova tentativa?</string>
    <string name="seq">Seq.</string>
    <string name="data_pedido_fut">Data Pedido</string>
    <string name="create_invoice_error">Erro ao criar nota fiscal!</string>
    <string name="title_activity_activate_user">Ativação do Dispositivo</string>
    <string name="ativando_imei">Ativando o IMEI</string>
    <string name="txtTituloConsultInvoice">Testando conexão</string>
    <string name="conn_estabilish">Estabelecendo conexão com o servidor</string>
    <string name="ativando_titulo">Validando</string>
    <string name="dispositivo_nao_validado">Dispositivo não validado, favor validar.</string>
    <string name="ativado_sucesso">Dispositivo ativado com sucesso.</string>
    <string name="title_activity_client_order">Pedido do Cliente</string>
    <string name="title_activity_reimpressao">Reimpressão de CEC/DANFE</string>
    <string name="app_name">OBC</string>
    <string name="app_file_encoding">ISO-8859-1</string>
    <string name="hodometro">Hodômetro:</string>
    <string name="new_client_screen_title">Novo Cliente</string>
    <string name="confirm_travel_data">Confirmar Dados da Viagem</string>
    <string name="confirm_travel_client">Confirmação dos Dados do Cliente</string>
    <string name="num_travel">Número da Viagem: </string>
    <string name="travel_date">Data da Viagem: </string>
    <string name="num_vehicle">Número do Veículo:</string>
    <string name="unidade">Filial (RBA/RBU):</string>
    <string name="rout_num">Rota:</string>
    <string name="cancelar_viagem">Cancelar Viagem</string>
    <string name="client_list_title">Lista de Clientes</string>
    <string name="product_list_title">Lista de Produtos</string>
    <string name="customer_service_label">Menu Principal</string>
    <string name="nVeiculo">Código do Veículo: </string>
    <string name="load_travel">CARREGAR VIAGEM</string>
    <string name="config_connection">CONFIGURAR CONEXÃO</string>
    <string name="error_unidade">Entre com o código da unidade.</string>
    <string name="error_veiculo">Entre com o código do veículo.</string>
    <string name="file_not_found_error">Arquivo não encontrado.</string>
    <string name="file_not_found_error_2">Arquivo não encontrado.\nVerifique se filial e veículo estão corretos.</string>
    <string name="about">Sobre o Aplicativo</string>
    <string name="voltar">Voltar</string>
    <string name="client_select">Seleção do Cliente</string>
    <string name="client_stop">Operações do Cliente</string>
    <string name="client_number">Código do Cliente: </string>
    <string name="system_settings">CONFIGURAÇÃO DO SISTEMA</string>
    <string name="system_version">Versão %s</string>
    <string name="battery_status">Status da Bateria</string>
    <string name="customer_recovery">RECUPERAÇÃO ON LINE DE CLIENTE</string>
    <string name="customer_recovery_message">
        Favor informar o código JDE do cliente a ser recuperado ou atualizado na viagem!</string>
    <string name="client_confirm">CONFIRMAÇÃO DE CLIENTE</string>
    <string name="codigo_titulo">Código</string>
    <string name="codigo">Código:</string>
    <string name="client_name">Nome:</string>
    <string name="client_address">Endereço:</string>
    <string name="client_cnpj_cpf">CNPJ/CPF:</string>
    <string name="client_ie">Inscrição Estadual:</string>
    <string name="client_razao_social">Razão Social:</string>
    <string name="client_nome_fantasia">Nome Fantasia:</string>
    <string name="client_telefone_principal">Telefone Principal:</string>
    <string name="client_contato">Contato:</string>
    <string name="tecnico_responsavel">Técnico Responsável:</string>
    <string name="distribuidora_gas">Distribuidora de Gás:</string>
    <string name="unidade_responsavel">Filial Responsável:</string>
    <string name="client_negocio">Negócio:</string>
    <string name="client_segmento">Segmento:</string>
    <string name="client_subsegmento">SubSegmento:</string>
    <string name="client_email">E-mail NF-e:</string>
    <string name="client_codigo_situacao">Código de Situação</string>
    <string name="qtd_itens">Quantidade Total: </string>
    <string name="send_invoice_warning_1">Atenção! Aguarde a finalização do processo de emissão da NFe.</string>
    <string name="send_invoice_warning_2">
        Atenção! Não é permitido reiniciar o dispositivo (BOOT) até que o CEC seja impresso.</string>
    <string name="item_">Item: %s</string>
    <string name="charge_server">Servidor de Comunicação</string>
    <string name="contingency_server">Servidor de Contingência</string>
    <string name="total_time">Tempo Total (minutos)</string>
    <string name="motorista">Motorista</string>
    <string name="cargo">Cargo:</string>
    <string name="telefone">Telefone:</string>
    <string name="num_tanque">Tanque: %s</string>
    <string name="capacidade_pol">Cap.Pol/PSI: %f</string>
    <string name="capacidade_m3_kg">Cap. M3/Kg: %f</string>
    <string name="fator_conv">Fator Conversão (M3/Kg): %f</string>
    <string name="nivelAntes">Nível Antes (Pol.)</string>
    <string name="nivelDepois">Nível Depois (Pol.)</string>
    <string name="pesoAntes">Peso Antes</string>
    <string name="pesoDepois">Peso Depois</string>
    <string name="diferenca">Diferença: %f</string>
    <string name="nota_fiscais">1. Notas Fiscais</string>
    <string name="contagem_fisica">2. Contagem Física</string>
    <string name="situacao_carga">3. Situação de Carga da Viagem</string>
    <string name="contagem_fisica_hc">4. Contagem Física HC</string>
    <string name="movimentacao_hc">5. Movimentação HC</string>
    <string name="simples_uc">6. Simples Conferência HC</string>
    <string name="volume_descarregado">7. Cálculo de Volume Descarregado</string>
    <string name="viagem_multipla">Viagem Múltipla</string>
    <string name="nova_viagem">Será iniciada uma nova viagem!\nConfirmar dados!</string>
    <string name="sequencia">Sequência: %d de %d</string>
    <string name="numero_viagem">Número da Viagem: %d</string>
    <string name="aguarde">Aguarde…</string>
    <string name="invoice_obc">Nota Fiscal OBC:</string>
    <string name="total_itens">Total de Itens:</string>
    <string name="invoice_jde">Nota Fiscal JDE:</string>
    <string name="serie_jde">Série JDE:</string>
    <string name="rcl_nf">Com Nota Fiscal WM</string>
    <string name="rcl_cli">Com Nota Fiscal do Cliente</string>
    <string name="tipo_rcl">Seleção do Tipo de Recolhimento</string>
</resources>