<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/screen_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_rcl"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/rbtn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rcl_nf"/>

            <RadioButton
                android:id="@+id/rbtn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rcl_cli"/>
        </RadioGroup>

    </LinearLayout>

</FrameLayout>