<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/txtCabecalhoProgressDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:text="@string/send_invoice_warning_1"
        android:textAlignment="center"/>

    <Chronometer
        android:id="@+id/chrono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:format="00:10"
        android:textAlignment="center"
        android:textColor="@color/appTextColor"
        android:textSize="50dp"/>


    <TextView
        android:id="@+id/txtStatusProgressDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/status"

        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtRodapeProgressDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/send_invoice_warning_2"
        android:textAlignment="center"/>

</LinearLayout>
