<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/screen"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/screen_padding"
              android:orientation="vertical"
              tools:context=".views.NextTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/viagem_multipla"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/nova_viagem"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txtSeqNextTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sequencia"
            />

        <TextView
            android:id="@+id/txtNumeroViagemNextTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/numero_viagem"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnConfirmarNextTrip"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_h"
            android:background="@color/appTextColorWithBackground"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_confirmar"/>

    </LinearLayout>


</LinearLayout>

